// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`README:1 \`importAll\` uses dynamic import 1`] = `

import importAll from 'import-all.macro'

document.getElementById('load-stuff').addEventListener('click', () => {
  importAll('./my-files/*.js').then(all => {
    console.log(all)
  })
})

      ↓ ↓ ↓ ↓ ↓ ↓

document.getElementById('load-stuff').addEventListener('click', () => {
  Promise.all([
    import('./my-files/a.js'),
    import('./my-files/b.js'),
    import('./my-files/c.js'),
    import('./my-files/d.js'),
  ])
    .then(function importAllHandler(importVals) {
      return {
        a: importVals[0],
        b: importVals[1],
        c: importVals[2],
        d: importVals[3],
      }
    })
    .then(all => {
      console.log(all)
    })
})


`;

exports[`README:2 \`importAll.sync\` uses static imports 1`] = `

import importAll from 'import-all.macro'

const a = importAll.sync('./my-files/*.js')

      ↓ ↓ ↓ ↓ ↓ ↓

import * as _a from './my-files/a.js'
import * as _b from './my-files/b.js'
import * as _c from './my-files/c.js'
import * as _d from './my-files/d.js'

const a = {
  a: _a,
  b: _b,
  c: _c,
  d: _d,
}


`;

exports[`README:3 \`importAll.deferred\` gives an object with dynamic imports 1`] = `

import importAll from 'import-all.macro'

const routes = importAll.deferred('./my-files/*.js')

      ↓ ↓ ↓ ↓ ↓ ↓

const routes = {
  a: function a() {
    return import('./my-files/a.js')
  },
  b: function b() {
    return import('./my-files/b.js')
  },
  c: function c() {
    return import('./my-files/c.js')
  },
  d: function d() {
    return import('./my-files/d.js')
  },
}


`;

exports[`incorrect API usage 1`] = `

import importAll from 'import-all.macro'
const x = importAll.defered('hi')

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/macro.js: ../macro: This is not supported: \`importAll.defered\`. Please see the import-all.macro documentation

`;

exports[`no usage 1`] = `

import importAll from 'import-all.macro'

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`non-static evaluate-able expression 1`] = `

import importAll from 'import-all.macro'
const x = importAll(global.whatever)

      ↓ ↓ ↓ ↓ ↓ ↓

Error: <PROJECT_ROOT>/src/__tests__/macro.js: ../macro: There was a problem evaluating the value of the argument for the code: importAll(global.whatever). If the value is dynamic, please make sure that its value is statically deterministic.

`;
